infrastructure/cert-manager/cert-manager-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: limit-ingress-allow-egress-all
  namespace: cert-manager
spec:
  podSelector: {}
  egress:
  - {}
  ingress:
  - from:
    - podSelector: {} 
  policyTypes:
  - Ingress
  - Egress
